--- a/Lab1/README
+++ b/Lab1/README
@@ -28,6 +28,9 @@ LAB1基础版本无误，并更新至master，此版本非linux。
 两个线程读取可以使用锁+信号量实现
 2021/3/27--ZJJ
 对接受任意数字的输入进行了最基本的改写，但是还没有建立线程完成这项任务，还没有和之前的代码整合。
+2021/3/28--ZJJ
+和代码整合了，能够通过make形成可执行文件，接受任意多个输出，但还不是独立线程处理
+学习了用git创建分支和正确的提交的步骤和方法
 2021/3/31--LHZ
 之前讨论的一种优化方法，将结果正确检测函数solve()放在每一个线程中运行。
 2021/4/3--LHZ
@@ -39,3 +42,6 @@ LAB1基础版本无误，并更新至master，此版本非linux。
 2021/4/5--LHZ
 解决了，又是那个*arg的问题，不小心把它给释放了
 我寻思着，我都释放了，程序居然还能跑对好几个？C++对程序员要求太高了
+2021/4/6--ZJJ
+学习了shell脚本的有关知识。借鉴学长的代码，尝试使用shell代替人工进行多输入文件代码正确性的测试
+以及尝试使用python中的工具进行绘图
