--- a/Lab1/README
+++ b/Lab1/README
@@ -50,3 +50,5 @@ LAB1基础版本无误，并更新至master，此版本非linux。
 其实要真正发挥CPU的性能，应该先进行CPU隔离，在进行CPU绑定，但是我不会CPU隔离
 因为那样好麻烦，还要重启虚拟机，懒
 希望性能会有提高
+2021/4/9--LHZ
+今天进行展示，很满意！
